k8s/overlays/integration/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  template:
    spec:
      containers:
        - name: api
      nodeSelector:
        doks.digitalocean.com/node-pool: pool-nawhas-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  template:
    spec:
      containers:
        - name: queue
      nodeSelector:
        doks.digitalocean.com/node-pool: pool-nawhas-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  template:
    spec:
      containers:
        - name: web
      nodeSelector:
        doks.digitalocean.com/node-pool: pool-nawhas-dev
