k8s/overlays/integration/mailhog.yml
apiVersion: v1
kind: Service
metadata:
  name: mail
  labels:
    app: mail
spec:
  type: NodePort
  selector:
    app: mail
  ports:
    - port: 8025
      targetPort: 8025
      name: 'ui'
      protocol: TCP
    - port: 1025
      targetPort: 1025
      name: 'smtp'
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail
  labels:
    app: mail
spec:
  selector:
    matchLabels:
      app: mail
  replicas: 1
  template:
    metadata:
      labels:
        app: mail
    spec:
      containers:
        - name: mail
          image: mailhog/mailhog:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8025
              name: ui
            - containerPort: 1025
              name: smtp
