k8s/overlays/integration/services.yml
apiVersion: v1
kind: Service
metadata:
  name: mail
  labels:
    app: mail
spec:
  type: NodePort
  selector:
    app: mail
  ports:
    - port: 8025
      targetPort: 8025
      name: 'mail'
      protocol: TCP
