k8s/overlays/integration/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nawhas-ingress
spec:
  tls:
    - hosts:
      - <INTG_API_DOMAIN>
      - <INTG_APP_DOMAIN>
      - <INTG_SEARCH_HOST>
      - <INTG_MAIL_HOST>
      secretName: nawhas-tls
  rules:
    - host: <INTG_API_DOMAIN>
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-nginx
                port:
                  number: 80
    - host: <INTG_APP_DOMAIN>
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  number: 3000
    - host: <INTG_SEARCH_HOST>
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: search
                port:
                  number: 7700
    - host: <INTG_MAIL_HOST>
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mail
                port:
                  number: 8025
